Fix for wrong font size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -243,6 +243,8 @@ a:after {
 
 .timeline h1 {
 	color: white;
+	padding-top: 2px;
+	font-size: 16px;
 }
 
 .timeline>li.timeline-inverted>.timeline-panel {
@@ -313,6 +315,11 @@ a:after {
         line-height: 18px;
     }
 
+	.timeline h1 {
+		padding-top: 10px;
+        font-size: 22px;
+    }
+	
     .timeline>li.timeline-inverted>.timeline-panel {
         float: right;
         padding: 0 30px 20px 20px;
@@ -340,6 +347,11 @@ a:after {
         font-size: 18px;
         line-height: 26px;
     }
+	
+	.timeline h1 {
+		padding-top: 25px;
+        font-size: 36px;
+    }
 
     .timeline>li.timeline-inverted>.timeline-panel {
         padding: 0 20px 20px;
@@ -363,6 +375,11 @@ a:after {
 
     .timeline>li .timeline-image h4 {
         margin-top: 40px;
+    }
+	
+	.timeline h1 {
+		padding-top: 36px;
+        font-size: 36px;
     }
 
     .timeline>li.timeline-inverted>.timeline-panel {
